--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "node server.js",
     "test": "NODE_ENV=test mocha --recursive ./tests "
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,6 +27,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
+    "husky": "^1.2.1",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "node-mocks-http": "^1.7.3",
