--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
+      "pre-commit": "npm test && eslint . --fix",
       "pre-push": "npm test"
     }
   },
